--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
+    "aos": "^3.0.0-beta.6",
     "bootstrap": "^4.6.0",
+    "gsap": "^3.6.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "scrollmagic": "^2.0.8",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
