--- a/package.json
+++ b/package.json
@@ -8,13 +8,12 @@
     "@testing-library/user-event": "^12.6.2",
     "aos": "^3.0.0-beta.6",
     "bootstrap": "^4.6.0",
-    "gsap": "^3.6.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "scrollmagic": "^2.0.8",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
