--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "@testing-library/user-event": "^12.6.2",
     "aos": "^3.0.0-beta.6",
     "bootstrap": "^4.6.0",
-    "gsap": "^3.6.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-gsap": "^2.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-scrollmagic": "^2.2.0",
