--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.6.2",
     "aos": "^3.0.0-beta.6",
     "bootstrap": "^4.6.0",
+    "gsap": "^3.6.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
