--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "bootstrap": "^4.6.0",
     "gsap": "^3.6.0",
     "jquery": "^3.5.1",
+    "node-sass": "^4.14.1",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^17.0.1",
     "react-gsap": "^2.2.1",
     "react-router-dom": "^5.2.0",
