--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "node-sass": "^4.14.1",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
-    "react-awesome-slider": "^4.1.0",
     "react-dom": "^17.0.1",
     "react-gsap": "^2.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-scrollmagic": "^2.2.0",
+    "swiper": "^6.5.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
