--- a/package.json
+++ b/package.json
@@ -6,9 +6,19 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "aos": "^2.3.4",
+    "bootstrap": "^4.6.0",
+    "gsap": "^3.6.1",
+    "jquery": "^3.6.0",
+    "node-sass": "^5.0.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-gsap": "^2.2.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-scrollmagic": "^2.3.0",
+    "react-textfit": "^1.1.1",
+    "swiper": "^6.5.2",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
