--- a/package.json
+++ b/package.json
@@ -3,23 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.3",
-    "@testing-library/user-event": "^12.6.2",
-    "aos": "^3.0.0-beta.6",
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.6",
+    "@testing-library/user-event": "^12.8.3",
+    "aos": "^2.3.4",
     "bootstrap": "^4.6.0",
-    "gsap": "^3.6.0",
-    "jquery": "^3.5.1",
-    "node-sass": "^4.14.1",
-    "popper.js": "^1.16.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "gsap": "^3.6.1",
+    "jquery": "^3.6.0",
+    "node-sass": "^5.0.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-gsap": "^2.2.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
-    "react-scrollmagic": "^2.2.0",
-    "swiper": "^6.5.1",
-    "web-vitals": "^0.2.4"
+    "react-scripts": "4.0.3",
+    "react-scrollmagic": "^2.3.0",
+    "react-textfit": "^1.1.1",
+    "swiper": "^6.5.2",
+    "web-vitals": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
