--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-gsap": "^2.2.1",
+    "react-modal": "^3.12.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scrollmagic": "^2.3.0",
